--- a/spam.yml
+++ b/spam.yml
@@ -1,6 +1,5 @@
 ---
-- from: 1896
-  return: 1700
+- return: 1700
   path: 1685
   delivered: 1164
   zzzz: 456
@@ -25,7 +24,6 @@
   subject: 1896
   life: 322
   insurance: 164
-  more: 223
   date: 1896
   mime: 1581
   version: 1672
@@ -81,8 +79,6 @@
   center: 782
   save: 228
   spend: 43
-  than: 48
-  have: 170
   quote: 125
   savings: 81
   align: 740
@@ -99,7 +95,6 @@
   provide: 185
   free: 856
   access: 184
-  very: 53
   best: 448
   companies: 188
   lowest: 130
@@ -134,8 +129,6 @@
   website: 192
   savequote: 2
   click: 993
-  here: 623
-  your: 720
   strong: 132
   protecting: 6
   investment: 160
@@ -151,7 +144,6 @@
   mailto: 540
   coins: 3
   btamail: 161
-  please: 589
   remove: 692
   reside: 3
   state: 316
@@ -175,7 +167,6 @@
   host: 168
   claimed: 125
   slim: 17
-  down: 41
   taylor: 8
   serveimage: 4
   freeyankeedom: 11
@@ -251,7 +242,6 @@
   account: 170
   services: 221
   user: 95
-  name: 290
   password: 21
   membership: 55
   sites: 144
@@ -265,12 +255,10 @@
   instant: 69
   internet: 645
   news: 146
-  with: 289
   just: 552
   million: 252
   members: 97
   signed: 53
-  last: 67
   month: 243
   offering: 87
   advertisers: 14
@@ -284,13 +272,11 @@
   following: 238
   links: 59
   member: 104
-  these: 151
   multi: 236
   dollar: 56
   operations: 12
   policies: 28
   rules: 26
-  fill: 53
   required: 195
   info: 348
   charge: 110
@@ -373,23 +359,16 @@
   founders: 3
   major: 104
   players: 16
-  this: 981
-  once: 90
   invitation: 11
   experts: 35
   calling: 40
   huge: 115
   cash: 199
   flow: 16
-  ever: 53
   conceived: 5
   leverage: 10
-  over: 86
-  again: 52
   question: 43
-  either: 8
   wealthy: 22
-  which: 20
   tossing: 3
   lifeline: 2
   sake: 7
@@ -420,11 +399,8 @@
   sales: 174
   blast: 10
   immediately: 137
-  upon: 23
   entry: 22
   wait: 83
-  call: 191
-  back: 86
   time: 636
   compliance: 70
   section: 75
@@ -454,7 +430,6 @@
   communications: 97
   continued: 15
   inclusion: 6
-  only: 220
   gracious: 2
   permission: 45
   send: 443
@@ -528,7 +503,6 @@
   tahoma: 80
   verdana: 364
   change: 149
-  that: 182
   protect: 96
   future: 361
   sufficient: 8
@@ -609,7 +583,6 @@
   tobacco: 27
   products: 229
   months: 126
-  amount: 33
   need: 399
   plan: 118
   submit: 324
@@ -621,7 +594,6 @@
   highly: 41
   rated: 31
   today: 440
-  there: 224
   copyright: 72
   rights: 106
   reserved: 60
@@ -648,8 +620,6 @@
   doorstep: 1
   short: 90
   period: 57
-  will: 184
-  most: 103
   print: 61
   successleads: 1
   telephone: 94
@@ -700,7 +670,6 @@
   clips: 1
   cellular: 6
   accessories: 16
-  below: 78
   wholesale: 27
   prices: 156
   merchant: 34
@@ -742,7 +711,6 @@
   girl: 18
   door: 28
   tour: 9
-  first: 109
   photos: 10
   sneeky: 1
   nude: 6
@@ -758,7 +726,6 @@
   wireless: 18
   credit: 312
   approval: 42
-  must: 60
   activate: 5
   activation: 4
   applies: 16
@@ -787,7 +754,6 @@
   minute: 106
   3darial: 86
   conferencing: 6
-  made: 17
   onlyper: 9
   including: 151
   distance: 32
@@ -846,7 +812,6 @@
   original: 153
   drawings: 4
   plus: 131
-  something: 8
   report: 159
   using: 199
   descrambler: 5
@@ -886,17 +851,13 @@
   reason: 72
   refund: 32
   order: 319
-  within: 38
-  next: 34
   bonus: 81
   manual: 31
   contains: 85
   hard: 86
   know: 290
-  also: 104
   radar: 3
   jammer: 2
-  never: 95
   speeding: 8
   ticket: 25
   unit: 13
@@ -905,15 +866,12 @@
   jammers: 2
   states: 151
   bonuses: 31
-  alone: 13
   worth: 60
   acting: 13
   thirty: 30
   guarantee: 133
   completely: 68
   satisfied: 35
-  keep: 57
-  nothing: 35
   regular: 57
   price: 247
   special: 290
@@ -947,7 +905,6 @@
   considering: 10
   situation: 78
   escaped: 5
-  along: 9
   husband: 27
   sons: 5
   george: 10
@@ -956,25 +913,19 @@
   abidjan: 9
   cote: 7
   ivoire: 7
-  where: 41
   settled: 5
-  while: 53
   later: 78
   morroco: 3
   died: 39
   disease: 15
-  however: 85
   decided: 61
   changed: 23
   billions: 11
   deposited: 33
   swiss: 16
-  other: 51
-  into: 32
   forms: 53
   coded: 7
   safe: 77
-  because: 69
   laurent: 10
   kabila: 10
   arrangement: 16
@@ -982,14 +933,11 @@
   european: 21
   freeze: 6
   treasures: 6
-  some: 60
-  hence: 15
   children: 48
   laying: 4
   africa: 39
   study: 28
   till: 11
-  when: 108
   things: 67
   gets: 33
   better: 136
@@ -1001,7 +949,6 @@
   france: 20
   confiscated: 6
   french: 98
-  such: 17
   identity: 34
   traced: 4
   eighteen: 3
@@ -1009,11 +956,8 @@
   safekeeping: 2
   funds: 57
   prevent: 23
-  them: 24
   knowing: 11
-  what: 188
   indicate: 30
-  interest: 82
   assist: 70
   behalf: 32
   acknowledge: 13
@@ -1042,7 +986,6 @@
   shall: 34
   tell: 98
   currently: 114
-  being: 34
   maintained: 8
   remunerationfor: 2
   kindly: 40
@@ -1054,7 +997,6 @@
   kxzzzzgxlrah: 1
   moode: 1
   term: 82
-  take: 140
   moment: 57
   qualify: 57
   smokers: 17
@@ -1107,7 +1049,6 @@
   kenya: 4
   airbus: 2
   flight: 9
-  since: 63
   heard: 56
   death: 51
   expecting: 9
@@ -1220,7 +1161,6 @@
   total: 117
   listed: 78
   remaining: 16
-  five: 31
   reaching: 3
   indicates: 1
   reported: 30
@@ -1230,13 +1170,11 @@
   concorde: 1
   plane: 8
   crash: 11
-  meanwhile: 9
   finished: 6
   execution: 14
   december: 13
   come: 183
   forward: 269
-  hundred: 24
   expedite: 2
   position: 96
   regularisation: 1
@@ -1438,7 +1376,6 @@
   novachem: 3
   soiniika: 3
   senet: 3
-  against: 18
   harmful: 13
   viruses: 27
   frontpage: 108
@@ -1488,7 +1425,6 @@
   nter: 34
   weight: 169
   affiliates: 28
-  yours: 75
   decoration: 110
   fffff: 19
   obtained: 60
@@ -1562,11 +1498,9 @@
   oxyeli: 8
   huyahoo: 10
   tjndcf: 1
-  serious: 32
   hostname: 9
   supplied: 18
   partners: 78
-  give: 41
   away: 95
   earn: 103
   talk: 58
@@ -1580,12 +1514,9 @@
   eyes: 13
   tweaked: 1
   little: 103
-  anyone: 59
   busy: 15
   aren: 25
   talking: 22
-  then: 90
-  full: 61
   helped: 39
   julie: 10
   week: 164
@@ -1606,7 +1537,6 @@
   area: 117
   excite: 102
   free_cd: 2
-  bill: 58
   statement: 11
   unsolicited: 72
   commercial: 69
@@ -1644,7 +1574,6 @@
   forget: 58
   forever: 69
   kuhleersparnis: 2
-  would: 64
   sleep: 47
   hunger: 21
   pains: 23
@@ -1683,7 +1612,6 @@
   s_img: 1
   recruit: 5
   solid: 80
-  bottom: 35
   absmiddle: 3
   g_jeum: 1
   span: 152
@@ -1718,7 +1646,6 @@
   powerful: 95
   distributing: 7
   earth: 15
-  well: 46
   numbers: 98
   staggering: 15
   suppose: 1
@@ -1736,7 +1663,6 @@
   discover: 78
   paying: 81
   thanks: 94
-  before: 44
   hearing: 30
   lately: 15
   popularity: 15
@@ -1747,7 +1673,6 @@
   described: 33
   really: 95
   investigated: 14
-  their: 25
   findings: 14
   proved: 18
   laws: 68
@@ -1810,12 +1735,10 @@
   honesty: 25
   reaps: 13
   reward: 21
-  after: 84
   ordered: 49
   cycle: 24
   doubt: 25
   counting: 20
-  move: 17
   insert: 21
   copy: 149
   accurately: 15
@@ -1839,11 +1762,9 @@
   continuing: 22
   example: 96
   orders: 120
-  those: 44
   resonded: 1
   responded: 22
   thoe: 1
-  each: 81
   grand: 26
   pencil: 14
   paper: 49
@@ -1853,7 +1774,6 @@
   responses: 29
   matter: 112
   calculate: 17
-  still: 27
   assuming: 19
   mailed: 22
   dare: 21
@@ -1866,7 +1786,6 @@
   larger: 44
   strongly: 57
   suggest: 24
-  always: 22
   prompt: 48
   currency: 33
   wrapped: 2
@@ -1900,15 +1819,12 @@
   continue: 64
   relax: 16
   roll: 23
-  every: 98
   placed: 31
   track: 112
   progress: 35
   watching: 23
   generate: 49
-  another: 28
   batch: 18
-  whole: 17
   process: 102
   limit: 44
   originator: 23
@@ -1998,7 +1914,6 @@
   fareast: 14
   ansi: 9
   bidi: 18
-  without: 34
   doctors: 17
   visit: 291
   universalmeds: 4
@@ -2006,7 +1921,6 @@
   quickly: 69
   approve: 10
   discreet: 8
-  system: 73
   allows: 52
   medication: 14
   tomorrow: 29
@@ -2030,13 +1944,11 @@
   perf: 7
   boing: 1
   mailscanner: 1
-  found: 9
   clean: 40
   stuart: 1
   searching: 45
   love: 84
   wrong: 38
-  find: 88
   syje: 1
   browse: 5
   personals: 11
@@ -2053,7 +1965,6 @@
   datecom: 1
   soul: 5
   mate: 3
-  through: 33
   acacac: 2
   registered: 82
   spamtrap: 1
@@ -2310,7 +2221,6 @@
   videos: 32
   waiting: 74
   lspeedhost: 5
-  least: 12
   clicking: 96
   takemeoff: 26
   marked: 25
@@ -2338,7 +2248,6 @@
   apktrudjae: 1
   slashed: 5
   ccaxc: 1
-  been: 28
   perfect: 77
   refinancing: 25
   mortgage: 150
@@ -2395,12 +2304,10 @@
   competitive: 31
   sansserif: 45
   lang: 59
-  they: 111
   demand: 39
   interview: 14
   intimidate: 4
   humiliate: 2
-  even: 67
   turn: 80
   tables: 13
   compete: 52
@@ -2447,7 +2354,6 @@
   cover: 30
   vehicles: 18
   miles: 18
-  less: 41
   fair: 41
   toll: 96
   hour: 95
@@ -2942,7 +2848,6 @@
   certificate: 7
   endeavor: 6
   seventeen: 3
-  should: 19
   proposition: 6
   rudiments: 2
   remain: 27
@@ -3082,9 +2987,6 @@
   values: 9
   deliberately: 5
   invoiced: 12
-  twelve: 4
-  three: 32
-  twenty: 16
   fully: 73
   projects: 29
   officially: 2
@@ -3223,7 +3125,6 @@
   recover: 1
   possibly: 11
   providing: 52
-  above: 21
   legitimate: 27
   sale: 89
   treat: 27
@@ -3233,7 +3134,6 @@
   efforts: 28
   slightly: 3
   leveraging: 2
-  many: 63
   advise: 9
   containing: 21
   bricks: 1
@@ -3277,7 +3177,6 @@
   erection: 26
   sister: 13
   tori: 1
-  both: 23
   sweet: 22
   honeys: 2
   posing: 1
@@ -3487,12 +3386,10 @@
   presentations: 13
   albums: 6
   invitations: 11
-  much: 53
   trees: 12
   printing: 17
   styles: 8
   slide: 7
-  show: 19
   sweep: 5
   wipe: 7
   embed: 9
@@ -3575,7 +3472,6 @@
   constructed: 4
   taste: 18
   templates: 7
-  front: 14
   graphical: 4
   statistics: 33
   promptly: 16
@@ -3633,7 +3529,6 @@
   began: 26
   heavy: 24
   hitting: 5
-  several: 10
   reporters: 1
   featured: 31
   fiscal: 5
@@ -3641,7 +3536,6 @@
   sourcing: 2
   technology: 102
   solutions: 34
-  although: 19
   raised: 7
   developing: 31
   increased: 57
@@ -3829,7 +3723,6 @@
   shipped: 39
   onlinepills: 1
   stay: 60
-  could: 19
   dose: 3
   settle: 11
   lover: 3
@@ -4304,7 +4197,6 @@
   decisions: 10
   securing: 3
   doesn: 61
-  whether: 31
   redit: 9
   brokers: 16
   keeps: 18
@@ -4386,7 +4278,6 @@
   iven: 7
   distributed: 13
   3dremove: 17
-  sometimes: 10
   brokerage: 9
   ugogdzqvtk: 1
   maximizer: 1
@@ -4416,7 +4307,6 @@
   reserve: 18
   traditional: 29
   straightline: 2
-  everyone: 34
   sponsor: 14
   profitresponder: 2
   lancsmail: 1
@@ -4572,7 +4462,6 @@
   pennies: 28
   informational: 10
   dream: 53
-  same: 23
   paste: 45
   delay: 34
   visa: 51
@@ -4873,7 +4762,6 @@
   attmail: 2
   lighter: 1
   olibykn: 1
-  everything: 58
   diets: 8
   miracle: 14
   pills: 9
@@ -4985,7 +4873,6 @@
   todays: 2
   tech: 39
   psmtp: 1
-  part: 17
   challenge: 10
   pays: 10
   rmill: 1
@@ -5130,7 +5017,6 @@
   gotten: 5
   game: 19
   subscriptions: 11
-  about: 57
   rode: 2
   bike: 2
   envelops: 2
@@ -5157,7 +5043,6 @@
   regulations: 26
   sections: 4
   exchanged: 5
-  others: 18
   megabucks: 1
   directons: 1
   hired: 6
@@ -5319,7 +5204,6 @@
   sacred: 6
   fatally: 4
   flawed: 6
-  cannot: 8
   courage: 10
   hype: 18
   lies: 9
@@ -5329,7 +5213,6 @@
   shame: 7
   cordially: 7
   sherman: 1
-  someone: 17
   beneficial: 15
   honestly: 7
   attbi: 13
@@ -5375,7 +5258,6 @@
   luck: 22
   labeled: 3
   wallaa: 1
-  whose: 1
   1and: 1
   palludan: 1
   summersweet: 1
@@ -5397,7 +5279,6 @@
   circle: 6
   falls: 4
   thanx: 9
-  further: 26
   onetime: 1
   osaka: 2
   aolmd: 10
@@ -5701,12 +5582,10 @@
   attend: 6
   sessio: 1
   taught: 11
-  himself: 1
   teaching: 5
   wealth: 30
   secrets: 54
   intense: 4
-  during: 32
   reveal: 7
   goals: 18
   ourse: 1
@@ -5744,7 +5623,6 @@
   pmgsecurities: 1
   benjamin: 1
   boyce: 1
-  forty: 7
   lows: 1
   barristerbassey: 1
   arabia: 11
@@ -5760,7 +5638,6 @@
   default_charset: 9
   xbody: 5
   sleeping: 8
-  anywhere: 35
   connection: 28
   pilot: 7
   inventory: 17
@@ -5799,7 +5676,6 @@
   nddc: 2
   supervising: 2
   runs: 8
-  nine: 6
   thosand: 2
   accrued: 3
   handled: 18
@@ -5910,7 +5786,6 @@
   election: 8
   infact: 4
   opposition: 9
-  under: 39
   invade: 3
   burn: 22
   handed: 4
@@ -6106,7 +5981,6 @@
   jchoate: 1
   newyork: 1
   herewith: 1
-  behind: 2
   elite: 3
   acjvhinugt: 1
   uhfvzzlq: 1
@@ -6326,7 +6200,6 @@
   contribute: 1
   usedand: 1
   industryforum: 1
-  become: 27
   issues: 20
   forumdiscussion: 1
   manufacturers: 9
@@ -6903,7 +6776,6 @@
   enforcement: 2
   follows: 27
   ofcs: 2
-  thus: 6
   enterprising: 2
   emerging: 8
   niue: 3
@@ -7607,7 +7479,6 @@
   motherless: 1
   spiritual: 7
   hated: 1
-  moreover: 9
   negative: 30
   almighty: 1
   hospital: 5
@@ -7621,7 +7492,6 @@
   microwave: 1
   expatiate: 1
   workers: 6
-  therefore: 19
   telegraphic: 1
   smooth: 8
   college: 46
@@ -7633,7 +7503,6 @@
   acknowledgement: 3
   fail: 17
   pension: 2
-  four: 13
   seasons: 2
   contributions: 4
   deductible: 14
@@ -9549,7 +9418,6 @@
   zhozjffulb: 1
   zwpwf: 1
   wsnjibgzujhxv: 1
-  ours: 3
   plhasik: 1
   wdxa: 1
   vysm: 1
@@ -10145,7 +10013,6 @@
   straightforward: 6
   fumble: 2
   boring: 3
-  whatever: 6
   teaser: 2
   installing: 9
   exceptional: 5
@@ -10389,7 +10256,6 @@
   meets: 17
   repaid: 9
   taxable: 9
-  none: 34
   collateral: 13
   signers: 12
   payer: 9
@@ -10788,7 +10654,6 @@
   sahara: 1
   yemen: 2
   yugoslavia: 4
-  former: 3
   zambia: 2
   cente: 5
   fields: 14
@@ -10863,7 +10728,6 @@
   cms_title: 1
   fantastic: 12
   crazy: 13
-  perhaps: 3
   chin: 3
   shutting: 1
   offerings: 1
@@ -10896,7 +10760,6 @@
   downfall: 1
   practitioners: 5
   session: 1
-  among: 2
   weblogs: 1
   affecting: 1
   editorially: 1
@@ -14046,7 +13909,6 @@
   oppose: 17
   render: 3
   livelyhood: 2
-  eight: 4
   trunk: 4
   destination: 4
   untimely: 6
@@ -14162,7 +14024,6 @@
   expiry: 6
   digits: 3
   agree: 14
-  together: 11
   export: 12
   mills: 5
   ontario: 6
@@ -14808,7 +14669,6 @@
   masses: 6
   umbrella: 1
   lighthearted: 1
-  rather: 6
   strive: 5
   outcome: 1
   godly: 1
@@ -18221,13 +18081,11 @@
   stems: 8
   suddenly: 8
   hostile: 1
-  though: 14
   gathered: 2
   convinced: 4
   modesty: 1
   careful: 4
   assisting: 8
-  sincere: 2
   implore: 6
   extraordinarily: 2
   m_bundu: 1
@@ -18968,7 +18826,6 @@
   sqea: 1
   vivek: 1
   responsevivek: 1
-  might: 3
   followings: 2
   typist: 1
   clerk: 1
@@ -18978,7 +18835,6 @@
   typing: 8
   currencies: 9
   siemen: 2
-  yourself: 16
   urine: 4
   surgical: 3
   chemo: 1
@@ -19010,7 +18866,6 @@
   rejoin: 1
   freewebs: 1
   registar: 1
-  anything: 35
   offerclubmail: 1
   duke: 1
   offerclub: 1
@@ -19069,7 +18924,6 @@
   console: 1
   comic: 20
   tick: 2
-  nobody: 4
   kimk: 1
   nbci: 1
   clickurl: 1
@@ -19101,7 +18955,6 @@
   prep: 1
   grey_hr: 1
   subsidiaries: 2
-  third: 3
   recording: 2
   borrower: 1
   subsidiares: 1
@@ -19118,7 +18971,6 @@
   outing: 1
   bedside: 1
   suspence: 1
-  towards: 5
   butt: 1
   hips: 3
   embarrass: 1
@@ -19164,7 +19016,6 @@
   left_curve_new: 1
   spotlight: 2
   right_curve_new: 1
-  detail: 9
   starring: 1
   clooney: 1
   brad: 5
@@ -19259,7 +19110,6 @@
   mhart: 1
   uncover: 7
   astounding: 12
-  almost: 15
   freehostaccess: 1
   freeht: 2
   mammoth: 6
@@ -19277,7 +19127,6 @@
   untraceable: 9
   adoption: 6
   neighbors: 23
-  around: 9
   transcripts: 13
   cloak: 10
   alimony: 10
@@ -19285,7 +19134,6 @@
   wiretaps: 10
   bdttaj: 1
   4tfox: 2
-  enough: 4
   insult: 3
   rake: 5
   tends: 3
@@ -19365,7 +19213,6 @@
   addressed: 6
   deeds: 4
   shelter: 1
-  wherever: 1
   millionaires: 7
   jealously: 1
   guarded: 3
@@ -19721,7 +19568,6 @@
   delight: 6
   foday: 3
   iron: 9
-  thereafter: 4
   rushed: 3
   neaarby: 1
   takegreat: 1
@@ -21553,7 +21399,6 @@
   suffice: 2
   glype: 1
   universe: 3
-  mill: 1
   stoned: 2
   honed: 1
   psychologically: 2
@@ -21680,8 +21525,6 @@
   container: 5
   temple: 10
   quantum: 3
-  indeed: 11
-  fire: 12
   toke: 2
   groovin: 2
   scene: 2
@@ -21884,7 +21727,6 @@
   prozaka: 1
   mini: 7
   domestic: 26
-  beyond: 3
   bqipt: 1
   prirodu: 1
   requiremus: 1
@@ -21940,7 +21782,6 @@
   employee: 12
   trainning: 2
   redeem: 2
-  fifteen: 2
   lucio: 2
   harper: 2
   recognised: 2
@@ -21968,7 +21809,6 @@
   chemicals: 5
   veterans: 5
   lunatics: 1
-  were: 3
   reform: 12
   victims: 5
   prohibit: 1
@@ -21977,7 +21817,6 @@
   genuine: 10
   faced: 1
   dilemma: 1
-  whom: 1
   entrusted: 3
   nominating: 1
   whichever: 3
@@ -22085,7 +21924,6 @@
   ranmoore: 2
   cybertime: 1
   stun: 1
-  until: 10
   pepper: 2
   batons: 1
   nonlethal: 1
@@ -22253,7 +22091,6 @@
   5bfifty: 1
   5dfrom: 1
   2ceven: 1
-  empty: 2
   2cas: 1
   2cthe: 1
   magnum: 1
@@ -22271,7 +22108,6 @@
   5btwenty: 1
   5dupon: 1
   disappointment: 1
-  side: 6
   2cwe: 1
   5bthirty: 1
   5dinto: 1
@@ -22515,7 +22351,6 @@
   ethic: 5
   extrordinary: 4
   finances: 6
-  else: 17
   listening: 10
   persue: 3
   disney: 9
@@ -22648,7 +22483,6 @@
   diagram: 1
   groves: 1
   mesa: 2
-  neither: 1
   endorsed: 7
   tuning: 1
   device: 6
@@ -23264,7 +23098,6 @@
   species: 2
   humans: 1
   micrograms: 1
-  between: 4
   deficient: 1
   somatotrophin: 1
   deficiency: 1
@@ -23377,7 +23210,6 @@
   mustard: 1
   misspelled: 1
   improving: 15
-  often: 5
   spot: 5
   unprofessional: 3
   sponsoring: 2
@@ -23790,7 +23622,6 @@
   stuffs: 1
   triple: 6
   excitedly: 1
-  done: 1
   paychecks: 1
   relieve: 4
   pressures: 1
@@ -24054,7 +23885,6 @@
   edges: 1
   pixels: 1
   skyscraper: 1
-  nevertheless: 1
   corbb: 1
   focuses: 2
   hitters: 2
@@ -24384,7 +24214,6 @@
   duplications: 1
   bronze: 1
   adds: 4
-  whenever: 1
   cyber: 2
   firepower: 1
   undeliverable: 8
@@ -24765,7 +24594,6 @@
   separation: 2
   divorce: 4
   representation: 2
-  somewhere: 1
   visitng: 1
   classrooms: 1
   sciences: 1
@@ -24864,7 +24692,6 @@
   wwnet: 1
   suggests: 4
   switch: 1
-  seems: 1
   anthony: 4
   cutter: 1
   opalsinthebag: 1
@@ -24919,7 +24746,6 @@
   gifs: 3
   flicking: 1
   unneccessary: 1
-  besides: 7
   breezy: 1
   logically: 1
   cheery: 1
@@ -25034,7 +24860,6 @@
   dfidvd: 1
   ddktsh: 1
   noarchive: 2
-  already: 3
   solarisexpert: 1
   microsystems: 1
   arrays: 1
@@ -25165,7 +24990,6 @@
   svetlova: 1
   natasha: 2
   fedorova: 1
-  anyway: 4
   petersburg: 5
   developers: 8
   considerably: 3
@@ -27045,7 +26869,6 @@
   rural: 2
   electrification: 2
   5million: 2
-  eleven: 2
   shore: 3
   disbursed: 2
   handicapped: 2
@@ -27289,7 +27112,6 @@
   valium: 6
   amazes: 6
   lebanese: 6
-  whoever: 6
   sweetness: 6
   magical: 10
   respectively: 8
@@ -28616,7 +28438,6 @@
   stipulate: 1
   dormant: 1
   deemed: 1
-  therein: 2
   speculated: 1
   transfered: 2
   occasioned: 1
@@ -29895,7 +29716,6 @@
   lights: 2
   smyrna: 1
   secluded: 1
-  onto: 1
   fmarriot_logo: 1
   diplomat_logo: 1
   ramada: 1
@@ -31041,7 +30861,6 @@
   emissions: 2
   catalytic: 2
   spark: 2
-  itself: 2
   xumx: 4
   bazzbgulvm: 1
   kplxl: 1
@@ -36113,7 +35932,6 @@
   teachings: 3
   savior: 3
   assbenefits: 3
-  describe: 3
   arranges: 3
   preparations: 3
   epsform: 1
@@ -36576,7 +36394,6 @@
   birt: 1
   anni: 1
   getw: 1
-  thin: 1
   cong: 1
   symp: 1
   enga: 1
@@ -36613,7 +36430,6 @@
   kollman: 1
   cpulis: 1
   cgocable: 1
-  seem: 2
   harmless: 2
   commercialized: 2
   respectability: 2
@@ -36709,7 +36525,6 @@
   wagers: 1
   minus: 1
   loads: 1
-  except: 2
   forecasted: 1
   anticipate: 2
   thinly: 1
@@ -38828,7 +38643,6 @@
   instability: 1
   accommodation: 2
   expenditure: 1
-  ourselves: 1
   tamko: 1
   cpuma: 2
   cpumatt: 2
@@ -43878,7 +43692,6 @@
   conjure: 1
   effectuality: 1
   heralded: 1
-  mostly: 1
   chanced: 1
   brid: 1
   artemisia: 1
